fix overflow

--- a/styles.css
+++ b/styles.css
@@ -570,18 +570,6 @@ h2 {
   line-height: 2.25rem;
 }
 
-.relative {
-  position: relative;
-}
-
-.col-span-1 {
-  grid-column: span 1 / span 1;
-}
-
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
@@ -642,24 +630,12 @@ h2 {
   grid-row: span 6 / span 6;
 }
 
-.row-span-7 {
-  grid-row: span 7 / span 7;
-}
-
-.row-span-9 {
-  grid-row: span 9 / span 9;
-}
-
 .row-start-1 {
   grid-row-start: 1;
 }
 
 .row-start-10 {
   grid-row-start: 10;
-}
-
-.row-start-11 {
-  grid-row-start: 11;
 }
 
 .row-start-2 {
@@ -682,16 +658,8 @@ h2 {
   grid-row-start: 6;
 }
 
-.row-start-7 {
-  grid-row-start: 7;
-}
-
 .row-start-8 {
   grid-row-start: 8;
-}
-
-.row-start-9 {
-  grid-row-start: 9;
 }
 
 .mr-10 {
@@ -730,14 +698,6 @@ h2 {
   width: 1.25rem;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.w-full {
-  width: 100%;
-}
-
 .max-w-full {
   max-width: 100%;
 }
@@ -754,28 +714,12 @@ h2 {
   scroll-snap-align: start;
 }
 
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .grid-cols-9 {
   grid-template-columns: repeat(9, minmax(0, 1fr));
-}
-
-.grid-rows-1 {
-  grid-template-rows: repeat(1, minmax(0, 1fr));
-}
-
-.grid-rows-10 {
-  grid-template-rows: repeat(10, minmax(0, 1fr));
 }
 
 .grid-rows-12 {
@@ -786,20 +730,8 @@ h2 {
   grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 
-.grid-rows-8 {
-  grid-template-rows: repeat(8, minmax(0, 1fr));
-}
-
-.grid-rows-9 {
-  grid-template-rows: repeat(9, minmax(0, 1fr));
-}
-
 .flex-row {
   flex-direction: row;
-}
-
-.flex-col {
-  flex-direction: column;
 }
 
 .items-start {
@@ -826,47 +758,12 @@ h2 {
   gap: 0.5rem;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .overflow-y-auto {
   overflow-y: auto;
-}
-
-.overflow-y-scroll {
-  overflow-y: scroll;
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
-}
-
-.bg-mylightbrown {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 237 224 / var(--tw-bg-opacity, 1));
-}
-
-.bg-purple-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(168 85 247 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white {
@@ -879,10 +776,6 @@ h2 {
      object-fit: contain;
 }
 
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -891,41 +784,12 @@ h2 {
   padding-left: 1rem;
 }
 
-.pl-7 {
-  padding-left: 1.75rem;
-}
-
-.pr-5 {
-  padding-right: 1.25rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
-.font-exo2 {
-  font-family: Exo 2, sans-serif;
-}
-
 .font-firacode {
   font-family: Fira Code, monospace;
-}
-
-.font-grapenuts {
-  font-family: Grape Nuts, cursive;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-3xl {
@@ -947,16 +811,6 @@ h2 {
   font-size: 10px;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -976,11 +830,6 @@ h2 {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
 .container {
   display: flex;
   flex-direction: column;
@@ -991,11 +840,6 @@ h2 {
 }
 
 @media (min-width: 768px) {
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -1008,6 +852,10 @@ h2 {
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .md\:text-\[12px\] {
+    font-size: 12px;
   }
 }
 
@@ -1076,10 +924,6 @@ h2 {
     grid-row: span 4 / span 4;
   }
 
-  .lg\:row-span-5 {
-    grid-row: span 5 / span 5;
-  }
-
   .lg\:row-span-6 {
     grid-row: span 6 / span 6;
   }
@@ -1112,20 +956,8 @@ h2 {
     grid-row-start: 9;
   }
 
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .lg\:grid-rows-10 {
     grid-template-rows: repeat(10, minmax(0, 1fr));
-  }
-
-  .lg\:grid-rows-5 {
-    grid-template-rows: repeat(5, minmax(0, 1fr));
   }
 
   .lg\:items-start {
@@ -1134,37 +966,6 @@ h2 {
 
   .lg\:items-end {
     align-items: flex-end;
-  }
-
-  .lg\:p-5 {
-    padding: 1.25rem;
-  }
-
-  .lg\:pl-20 {
-    padding-left: 5rem;
-  }
-
-  .lg\:pl-32 {
-    padding-left: 8rem;
-  }
-
-  .lg\:pr-20 {
-    padding-right: 5rem;
-  }
-
-  .lg\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .lg\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 
   .lg\:text-6xl {
@@ -1196,6 +997,18 @@ h2 {
   .lg\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:text-\[18px\] {
+    font-size: 18px;
+  }
+
+  .lg\:text-\[5px\] {
+    font-size: 5px;
+  }
+
+  .lg\:text-\[15px\] {
+    font-size: 15px;
   }
 
   .lg\:leading-loose {
